# Zenith

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  allocator.h  arena_allocator.c  arena_allocator.h  build.zig  build.zig.zon  compose.yaml  config.c  config.h  include.mk  lexer_plugin.c  lexer_plugin.h  main.zenith  main.znt  makefile  out.hex  out.zvm  parser.c  parser.h  plugged_lexer.c  plugin_loader.c  plugin_loader.h  setup.sh  source.znh  view.h  zenith.c
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issues.md
.github/workflows/: gen.yml  pages.yml
docker/: alpine.dockerfile
docker/alpine/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: ErrorsList.md  Optimization.md  Syntax.md  main.md
docs/optimizations/syntax/: ConstantPropagation.md  FunctionCalls.md  PeepHole.md
docs/proposals/: p0000-language-base.md
docs/syntax/: Comments.md  Constants.md  Functions.md
include/: compiler.h  dotenv.h  elfcreator.h  errorlist.h  formats.h  lex.h  nodes.h  optimizing.h  parser.h  platform.h  types.h  zenith.hpp  zenithvm.h
src/: CMakeLists.txt  analyzer.zig  compiler.cc  context.zig  debug.zig  disassemble.c  instructions.hpp  interpreter.cc  ir.zig  lex.c  lex.cc  lex.h  lexer.cc  lexer.hh  lexer.zig  main.c  main.cc  main.zenith  main.zig  main.znt  mainpage.hpp  makefile  misc.zig  node.zig  optimizer.zig  parse.cc  parser.cc  parser.hh  parser.zig  platform.h  platform.hpp  testing.zig  types.zig  utils.hh  virtual_debugger.c  virtualmachine.c  virtualmachine.h  zenith  zenith.hpp  zenith.zig
src/compiler/: CMakeLists.txt  compiler.c  compiler.cc  compiler.h  compiler.hpp  generator.cc  generator.hpp  registers.cc  result.particle
src/debugger/: CMakeLists.txt  debugger.c  diassembler.c  disassembler.c
src/dotenv/: CMakeLists.txt  dotenv.c
src/elf_formatter/: CMakeLists.txt  elfcreator.c
src/frontend/: cmdl.c  frontend.h
src/output/: CMakeLists.txt  elf.c  formats.h  ihex.c  zrf.c
src/parsing/: CMakeLists.txt  lex.c  lex.cc  node.c  optimizing.c  parse.c  parse.cc  parser.cc  parser.hpp  type_parsing.cc
src/runasm/: CMakeLists.txt  README.md  avr.rasm  runasm.cc  runasm.hpp  supernova.rasm
src/runners/: CMakeLists.txt  interrupts.cpp  loader.cc
src/runners/supernova/: CMakeLists.txt  README  README.md  group1.c  group1.h  supernova.c  supernova.h  supernova_private.h
src/supernova/: CMakeLists.txt  README.md  group0.c  group1.c  group1.h  supernova.c  supernova.h  supernova_private.h
src/targets/: supernova.zig
src/types/: CMakeLists.txt  array.c  array.hpp  hash.c  hashtable.c  list.c  string_view.hpp  types.h  types.hpp  vector.hpp
src/typing/: CMakeLists.txt  typing.cc  typing.hpp
src/virtualmachine/: CMakeLists.txt  fetch_memory.c  zenithvm.c
supernova/: README.md  group0.c  group0.h  group1.c  group1.h  makefile  supernova.c  supernova.h  supernova_private.h
test/: CMakeLists.txt  array.c  ihex.c  lex.c  test_array.c  test_ihex.c  test_lex.c  test_list.c  test_vm.c  vm.c
test/typing/: CMakeLists.txt  different.cc  same.cc  subtype.cc  supertype.cc
